RESOLVED FIXED47421
[Qt] Slider widgets looks bad on Mac
https://bugs.webkit.org/show_bug.cgi?id=47421
Summary [Qt] Slider widgets looks bad on Mac
Benjamin Poulain
Reported 2010-10-08 09:30:05 PDT
Created attachment 70260 [details] Example giving bad rendering QtWebKit renders the sliders (input type=range) with all sub controls. This involves rendering the tickmarks which usually does not render as expected for <input> element.
Attachments
Example giving bad rendering (21 bytes, text/html)
2010-10-08 09:30 PDT, Benjamin Poulain
no flags
Patch (1.26 KB, patch)
2010-10-08 09:35 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2010-10-08 09:35:35 PDT
Created attachment 70262 [details] Patch This only affect the rendering of the slider. I don't think it can be tested outside pixel tests.
Andreas Kling
Comment 2 2010-10-08 09:39:45 PDT
Comment on attachment 70262 [details] Patch r=me
WebKit Commit Bot
Comment 3 2010-10-08 10:24:09 PDT
Comment on attachment 70262 [details] Patch Clearing flags on attachment: 70262 Committed r69411: <http://trac.webkit.org/changeset/69411>
WebKit Commit Bot
Comment 4 2010-10-08 10:24:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.