2010-10-08  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Andreas Kling.

        [Qt] Slider widgets looks bad on Mac
        https://bugs.webkit.org/show_bug.cgi?id=47421

        This patch change the rendering of the slider to only have the
        subcontrols that would be defined by default on a QSlider.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::paintSliderTrack):

Canonical link: https://commits.webkit.org/60012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69411 268f45cc-cd09-0410-ab3c-d52691b4dbfc